stopgap solution

--- a/resources/assets/styles/site/pages/_home.scss
+++ b/resources/assets/styles/site/pages/_home.scss
@@ -1,7 +1,7 @@
 #content.home {
 	&:before {opacity: 0;}
 	color: white;
-	background: black;
+	background: rgba(0,0,0,1);
 	padding-top: 0; padding-left: 0; padding-right: 0;
 	position: relative;
 	video.reel {
